--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,137 @@
-/* leaving the styles until logo is done, so the look & feel can match the "brand" */
+@import url(http://fonts.googleapis.com/css?family=Rokkitt:700);
+
+@font-face {
+    font-family: 'ostrich_sansblack';
+    src: url('ostrich-black-webfont.eot');
+    src: url('ostrich-black-webfont.eot?#iefix') format('embedded-opentype'),
+    url('ostrich-black-webfont.woff') format('woff'),
+    url('ostrich-black-webfont.ttf') format('truetype'),
+    url('ostrich-black-webfont.svg#ostrich_sansblack') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    background-color: #f7f7f5;
+    color: #1b1b1b;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+h1 {
+    font-size: 2.6rem;
+}
+
+h1, h2 {
+    font-family: 'ostrich_sansblack', sans-serif;
+    font-weight: 700;
+}
+
+h2 {
+    line-height: 2rem;
+}
+
+a {
+    color: #000;
+}
+
+header, footer {
+    background-color: #e4e4e4;
+}
+
+header {
+    background-image: url('images/mobile-header-banner.png');
+    background-repeat: repeat-x;
+    padding-bottom: 16px;
+}
+
+header h1 {
+    background-image: url('images/mobile-logo.png');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: 340px 340px;
+    margin-top: 0;
+    padding-top: 372px;
+    font-family: 'Rokkitt', serif;
+}
+
+footer {
+    padding: 2rem;
+}
+
+p {
+    margin: 1rem auto;
+    max-width: 820px;
+    line-height: 1.25rem;
+    padding: 0.3rem;
+}
+
+footer p {
+    max-width: none;
+}
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.25),
+only screen and ( min--moz-device-pixel-ratio: 1.25),
+only screen and ( -o-min-device-pixel-ratio: 1.25/1),
+only screen and ( min-device-pixel-ratio: 1.25),
+only screen and ( min-resolution: 200dpi),
+only screen and ( min-resolution: 1.25dppx)
+{
+    header h1 {
+        background-image: url('images/mobile-retina-logo.png');
+    }
+}
+
+@media only screen and (min-width: 480px)
+{
+
+    header {
+        background-image: url('images/header-banner.png');
+    }
+
+    header h1 {
+        background-image: url('images/logo.png');
+        background-size: 480px 480px;
+        padding-top: 512px;
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 2.2rem;
+    }
+
+    p {
+        font-size: 1.4rem;
+        line-height: 1.75rem;
+    }
+}
+
+@media
+only screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 1.25),
+only screen and (min-width: 480px) and ( min--moz-device-pixel-ratio: 1.25),
+only screen and (min-width: 480px) and ( -o-min-device-pixel-ratio: 1.25/1),
+only screen and (min-width: 480px) and ( min-device-pixel-ratio: 1.25),
+only screen and (min-width: 480px) and ( min-resolution: 200dpi),
+only screen and (min-width: 480px) and ( min-resolution: 1.25dppx)
+{
+    header h1 {
+        background-image: url('images/retina-logo.png');
+    }
+}
+
+section {
+    clear: both;
+}
+
+*[itemprop=subEvent] {
+    display: inline-block;
+    margin: 1rem 2rem;
+    max-width: 320px;
+    vertical-align: top;
+}
