--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,6 @@ h1 {
 
 h1, h2 {
     font-family: 'ostrich_sansblack', sans-serif;
-    font-weight: 700;
 }
 
 h2 {
@@ -35,6 +34,13 @@ h2 {
 
 a {
     color: #000;
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+}
+
+a:hover,
+a:focus {
+    color: #4682b4;
 }
 
 header, footer {
@@ -52,7 +58,7 @@ header h1 {
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 340px 340px;
-    margin-top: 0;
+    margin: 0;
     padding-top: 372px;
     font-family: 'Rokkitt', serif;
 }
@@ -134,4 +140,9 @@ section {
     margin: 1rem 2rem;
     max-width: 320px;
     vertical-align: top;
+}
+
+a[href^='http://lanyrd.com'] {
+    font-family: 'ostrich_sansblack', sans-serif;
+    font-size: 2.4rem;
 }
