--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ header, footer {
 header {
     background-image: url('images/mobile-header-banner.png');
     background-repeat: repeat-x;
+    background-size: 1px 340px;
     padding-bottom: 16px;
 }
 
@@ -86,6 +87,11 @@ only screen and ( min-device-pixel-ratio: 1.25),
 only screen and ( min-resolution: 200dpi),
 only screen and ( min-resolution: 1.25dppx)
 {
+
+    header {
+        background-image: url('images/mobile-retina-header-banner.png');
+    }
+
     header h1 {
         background-image: url('images/mobile-retina-logo.png');
     }
@@ -96,6 +102,7 @@ only screen and ( min-resolution: 1.25dppx)
 
     header {
         background-image: url('images/header-banner.png');
+        background-size: 1px 480px;
     }
 
     header h1 {
@@ -126,6 +133,10 @@ only screen and (min-width: 480px) and ( min-device-pixel-ratio: 1.25),
 only screen and (min-width: 480px) and ( min-resolution: 200dpi),
 only screen and (min-width: 480px) and ( min-resolution: 1.25dppx)
 {
+    header {
+        background-image: url('images/retina-header-banner.png');
+    }
+
     header h1 {
         background-image: url('images/retina-logo.png');
     }
