Add Bytemark logo

--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,16 @@ a[href^='http://www.boohoo.com'] {
     width: 152px;
 }
 
+a[href^='http://www.bytemark.co.uk'] {
+    background-image: url('../styles/images/bytemark.png');
+    background-repeat: no-repeat;
+    background-size: 271px 21px;
+    display: inline-block;
+    height: 21px;
+    text-indent: -10000px;
+    width: 271px;
+}
+
 @media
 only screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 1.25),
 only screen and (min-width: 480px) and ( min--moz-device-pixel-ratio: 1.25),
@@ -196,6 +206,10 @@ only screen and (min-width: 480px) and ( min-resolution: 1.25dppx)
 
     a[href^='http://www.boohoo.com'] {
         background-image: url('../styles/images/boohoo_retina.png');
+    }
+
+    a[href^='http://www.bytemark.co.uk'] {
+        background-image: url('../styles/images/bytemark_retina.png');
     }
 }
 
