--- a/styles/style.css
+++ b/styles/style.css
@@ -228,3 +228,66 @@ ol, ul {
     padding-left: 1.6rem;
     padding-right: 1.6rem;
 }
+
+.mailing-list-banner {
+    background-color: #1b1b1b;
+    box-sizing: border-box;
+    color: #fff;
+    max-height: 0px;
+    overflow: hidden;
+}
+
+.mailing-list-banner form {
+    padding: 2rem 0 1rem 0;
+}
+
+.mailing-list-banner input[name='email'] {
+    border: 0.25rem solid #4682b4;
+    font-size: 1.2rem;
+    padding: 0.75rem;
+    transition: 0.2s;
+    width: 24rem;
+}
+
+.mailing-list-banner input[name='email'].warn {
+    background-color: #ee2727;
+}
+
+.mailing-list-banner input[name='email'].warn:valid {
+    background-color: #fff;
+}
+
+.mailing-list-banner input[type='submit'] {
+    background-color: #4682b4;
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 0;
+    padding: 1rem;
+    transition: 0.2s;
+}
+
+.mailing-list-banner input[type='submit']:focus,
+.mailing-list-banner input[type='submit']:hover {
+    background-color: #D8E0CA;
+    color: #1b1b1b;
+}
+
+.mailing-list-banner label {
+    clip: rect(1px, 1px, 1px, 1px);
+    position: absolute;
+}
+
+.mailing-list-banner p {
+    padding-bottom: 1.6rem;
+}
+
+@media only screen and (min-width: 480px)
+{
+    .mailing-list-banner.enabled {
+        max-height: 500px;
+        transition: 2s ease;
+    }
+}
